--- a/checkout/single-page-checkout/checkout.html
+++ b/checkout/single-page-checkout/checkout.html
@@ -1,13 +1,35 @@
-<?php
-	$site_root = $_SERVER['DOCUMENT_ROOT'];
-	$include_head = $site_root . "/fmag/includes/head.php";
-	$include_nav = $site_root . "/fmag/includes/nav.php";
-	$include_footer = $site_root . "/fmag/includes/footer.php";
-	$include_custom_css = "/fmag/core_assets/css/checkout.css";
-	
-	include_once($include_head);
-?>
 
+<!DOCTYPE html>
+<html class="no-js no-svg">
+<head>
+	<meta charset="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="profile" href="http://gmpg.org/xfn/11">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	
+	<!-- Featherlight lightbox CSS -->
+	<link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+	
+	<!-- Default CSS -->
+	<link rel="stylesheet" href="" type="text/css" />
+	
+				<!-- Custom CSS -->
+			<link rel="stylesheet" href="checkout.css" type="text/css" />
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="" type="text/javascript"></script>
+	
+
+	
+	
+	<!-- Slick Slider -->
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+</head>
+
+<body>
 <div class="container mart_d">
 	<div class="col-md-12">
 		<h1 class="tac">Secure Checkout</h1>
